--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 LoL/LoL/obj/
 LoL/LoL/bin/
+LoL/packages/Microsoft.Net.Http.2.2.28/lib/portable-net40+sl4+win8+wp71+wpa81/System.Net.Http.Extensions.XML
+LoL/packages/
+RiotSharp-master/
+LeagueOfLegendsAPI-master/
