--- a/LoL/LoL/LoL.csproj
+++ b/LoL/LoL/LoL.csproj
@@ -73,6 +73,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\ChampData.cs" />
     <Compile Include="Model\Region.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
