--- a/LoL/LoL/LoL.csproj
+++ b/LoL/LoL/LoL.csproj
@@ -46,9 +46,6 @@
     <Reference Include="NodaTime">
       <HintPath>..\packages\NodaTime.1.3.0\lib\net35-Client\NodaTime.dll</HintPath>
     </Reference>
-    <Reference Include="RiotSharp">
-      <HintPath>..\packages\RiotSharp.2.1.6\lib\net45\RiotSharp.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
@@ -78,6 +75,7 @@
     </ApplicationDefinition>
     <Compile Include="Model\ChampData.cs" />
     <Compile Include="Model\Region.cs" />
+    <Compile Include="Model\SummonerData.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
