--- a/LoL/LoL/LoL.csproj
+++ b/LoL/LoL/LoL.csproj
@@ -141,6 +141,12 @@
   <ItemGroup>
     <Resource Include="summonerbutton1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="header.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="bg.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
