--- a/LoL/LoL/LoL.csproj
+++ b/LoL/LoL/LoL.csproj
@@ -42,7 +42,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CreepScore">
-      <HintPath>..\packages\Creep.Score.0.5\lib\portable-net45+wp8+win8\Release\CreepScore.dll</HintPath>
+      <HintPath>..\packages\Creep.Score.0.6\lib\portable-net45+wp8+win8\Release\CreepScore.dll</HintPath>
+    </Reference>
+    <Reference Include="Flurl">
+      <HintPath>..\packages\Creep.Score.0.6\lib\portable-net45+wp8+win8\Release\Flurl.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
