--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ LoL/packages/
 RiotSharp-master/
 LeagueOfLegendsAPI-master/
 1/
+LoL/Setup/Setup/Express/SingleImage/Reports/
+LoL/Setup/Setup/Express/SingleImage/LogFiles/
+LoL/Setup/Setup/Express/SingleImage/
