--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ LeagueOfLegendsAPI-master/
 LoL/Setup/Setup/Express/SingleImage/Reports/
 LoL/Setup/Setup/Express/SingleImage/LogFiles/
 LoL/Setup/Setup/Express/SingleImage/
+LoL/WindowsFormsApplication1/
