--- a/LoL/LoL/LoL.csproj
+++ b/LoL/LoL/LoL.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Model\ChampData.cs" />
     <Compile Include="Model\Region.cs" />
     <Compile Include="Model\SummonerData.cs" />
+    <Compile Include="Model\TeamItem.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="WebBrowserOverlayWF.cs" />
     <Compile Include="Win32.cs" />
