--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ LoL/Setup/Setup/Express/SingleImage/Reports/
 LoL/Setup/Setup/Express/SingleImage/LogFiles/
 LoL/Setup/Setup/Express/SingleImage/
 LoL/WindowsFormsApplication1/
+LoL/UpgradeLog3.htm
