Добавил наброски Silverlight контрола

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ LoL/Setup/Setup/Express/SingleImage/LogFiles/
 LoL/Setup/Setup/Express/SingleImage/
 LoL/WindowsFormsApplication1/
 LoL/UpgradeLog3.htm
+LoL/LoL.zip
+LolSvlt/LolSvlt.Web/ClientBin/
+LolSvlt/LolSvlt/Bin/
+LolSvlt/LolSvlt/obj/
