--- a/LolSvlt/LolSvlt/LolSvlt.csproj
+++ b/LolSvlt/LolSvlt/LolSvlt.csproj
@@ -78,8 +78,10 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\Region.cs" />
     <Compile Include="Model\SummonerData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
